// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormatNumber> should format 0.1 into 0.10 1`] = `
<I18nProvider
  lang="en-US"
  locales={Object {}}
>
  <div>
    <FormatNumber
      className=""
      fractions={2}
      number={0.1}
    >
      <span
        className=""
      >
        0.10
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;

exports[`<FormatNumber> should format 1 into 1 1`] = `
<I18nProvider
  lang="en-US"
  locales={Object {}}
>
  <div>
    <FormatNumber
      className=""
      fractions={0}
      number={1}
    >
      <span
        className=""
      >
        1
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;

exports[`<FormatNumber> should format 1 into 1.00 1`] = `
<I18nProvider
  lang="en-US"
  locales={Object {}}
>
  <div>
    <FormatNumber
      className=""
      fractions={2}
      number={1}
    >
      <span
        className=""
      >
        1.00
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;

exports[`<FormatNumber> should format 1 into 1.000 1`] = `
<I18nProvider
  lang="en-US"
  locales={Object {}}
>
  <div>
    <FormatNumber
      className=""
      fractions={3}
      number={1}
    >
      <span
        className=""
      >
        1.000
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;

exports[`<FormatNumber> should return same number and className when no context is available 1`] = `
<FormatNumber
  className="some-class"
  fractions={2}
  number={1}
>
  <span
    className="some-class"
  >
    1
  </span>
</FormatNumber>
`;
